--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
     <title>Internship</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script src="script.js"></script>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 id="app"></h1>
+  </body>
+
+  <script src="script.js" charset="utf-8"></script>
 </html>
